tests/ppx/prop.expected
Characters 45-48:
  fun (obj : int) -> obj##.p
                     ^^^
Error: This expression has type int but an expression was expected of type
         < .. > Js.t
Characters 25-28:
  fun (obj : < > Js.t) -> obj##.p
                          ^^^
Error: This expression has type <  > Js.t
       but an expression was expected of type
         < p : < get : 'a; .. > Js.gen_prop; .. > Js.t
       The first object type has no method p
Characters 53-56:
  fun (obj : < p : float Js.writeonly_prop > Js.t) -> obj##.p + 1
                                                      ^^^
Error: This expression has type < p : float Js.writeonly_prop > Js.t
       but an expression was expected of type
         < p : (< get : 'b; .. > as 'a) Js.gen_prop; .. > Js.t
       Type float Js.writeonly_prop = < set : float -> unit > Js.gen_prop
       is not compatible with type 'a Js.gen_prop 
       The first object type has no method get
Characters 43-50:
  fun (obj : < p : float Js.prop > Js.t) -> obj##.p + 1
                                            ^^^^^^^
Error: This expression has type float but an expression was expected of type
         int

